# webllm-proxy

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  webllm-proxy.example.yaml
.github/workflows/: ci.yml  offline-bundle.yml  release.yml
docs/discovery/: 2026-07-10-backend-api-capture.md  2026-07-10-browser-backed-validation.md  2026-07-10-cloakbrowser.md  2026-07-10-databricks-llmproxy.md  2026-07-10-refactor-packaging.md  2026-07-10-setup-and-cloudflare.md  2026-07-10-thinking-effort.md  2026-07-10-tool-calling.md  2026-07-10-v1-proxy.md  2026-07-11-deep-research-scoping.md  2026-07-11-ms365-copilot-sydney.md  2026-07-12-emulated-thinking.md  2026-07-12-genie-code-agent.md  2026-07-13-copilot-live-test.md  2026-07-13-databricks-model-discovery.md  2026-07-13-open-model-discovery-tasks.md  2026-07-13-system-prompt-architecture.md  2026-07-13-token-usage-estimation.md  2026-07-15-databricks-anthropic-param-forwarding.md  README.md
docs/discovery/project_test/: is_prime_buggy.py  main.py  pyproject.toml  test_is_prime_buggy.py  test_main.py
docs/discovery/project_test/calc_challenge/: SPEC.md  calc.py  calc_parser.py  test_calc.py
docs/discovery/samples/: auth_session.redacted.json  endpoint_index.txt  key_exchanges.redacted.json  sse_f_conversation.redacted.txt
docs/pi/: pi-extension-sdk-index.md  webllm-integration.md
docs/protocol/: copilot-protocol.md
docs/refactor/: PROGRESS.md
integrations/pi/: README.md  biome.json  package-lock.json  package.json  tsconfig.json
integrations/pi/extensions/: chatgpt-agent.ts  memory.ts  passthrough.ts  research.ts  subagent.ts  webllm-provider.ts
integrations/pi/prompts/: chatgpt_agent.md
integrations/pi/src/: agentProtocol.ts  agentSettings.ts  agentStream.ts  agentTags.ts  codeIndex.ts  gateway.ts  memoryClient.ts  models.ts  passthrough.ts  researchClient.ts
integrations/pi/test/: agentProtocol.test.ts  agentSettings.test.ts  agentTags.test.ts  codeIndex.test.ts  memoryClient.test.ts  models.test.ts  passthrough.test.ts  research.test.ts
scripts/: agent_prompt_probe.py  build_offline_bundle.py  dbx_models_probe.py  e2e_live.py  har_explore.py
src/chatgpt_proxy/: __init__.py  __main__.py  browser.py  config.py  server.py  sse.py  tools.py
src/webllm_proxy/: __init__.py  __main__.py  server.py
src/webllm_proxy/core/: __init__.py  browser.py  env.py  process.py
src/webllm_proxy/providers/: __init__.py  base.py
src/webllm_proxy/providers/chatgpt/: __init__.py  config.py  routes.py  sse.py  tools.py
src/webllm_proxy/providers/databricks/: __init__.py  config.py  routes.py
tests/: smoke_copilot_chat_tools.py  smoke_copilot_reasoning.py  smoke_openai_sdk.py  test_accumulators.py  test_build_offline_bundle.py  test_chatgpt_sse.py  test_chrome_import.py  test_config.py  test_conversation_planner.py  test_convert.py  test_copilot_auth.py  test_copilot_models.py  test_copilot_signalr.py  test_databricks.py  test_databricks_body.py  test_databricks_models_wire.py  test_databricks_thinking_live.py  test_gateway.py  test_health_helpers.py  test_http.py  test_http_direct.py  test_openai_wire.py  test_prompts.py  test_research_scheduler.py  test_system_browser.py  test_tags.py  test_tokens.py  test_tools.py  test_wire_openai.py
webllm_proxy/: __init__.py  __main__.py  cli.py  server.py
webllm_proxy/application/: __init__.py  chat.py  research.py
webllm_proxy/domain/: __init__.py  conversation.py  ports.py  research.py
webllm_proxy/gateway/: __init__.py  _http.py  app.py  router.py  upstreams.py
webllm_proxy/gateways/: __init__.py
webllm_proxy/gateways/cloakbrowser/: __init__.py  session.py
webllm_proxy/http/: __init__.py  anthropic_routes.py  app.py  health.py  openai_routes.py  research_routes.py  routes.py
webllm_proxy/infra/: __init__.py  env.py  http_direct.py  logging.py  redaction.py
webllm_proxy/prompts/: __init__.py  genie_code_system.md  genie_framing.md  loader.py  system_header.md  tool_contract.md  user_request_framing.md
webllm_proxy/prompts/system_prompts/: databricks_default_system_prompt.md  databricks_genie_code_local_system_prompt.md  genie_code_tools.json  research_emulated.md  research_report.md  style_rules.md  webui_agent_prompt.md  webui_tool_contract.md  webui_tool_contract_copilot.md  webui_tool_contract_pi_builtin_manual.md
webllm_proxy/providers/: __init__.py  base.py
webllm_proxy/providers/chatgpt/: __init__.py  config.py  research.py  sse.py
webllm_proxy/providers/copilot/: README.md  __init__.py  accumulator.py  auth.py  client.py  config.py  exceptions.py  hashcash.py  models.py  provider.py  routes.py  sdk.py  signalr.py  transport.py
webllm_proxy/providers/copilot/editions/: __init__.py  base.py  consumer.py  m365.py
webllm_proxy/providers/copilot/protocol/: __init__.py  base.py  events.py  signalr.py
webllm_proxy/providers/copilot/tests/: test_protocol.py  test_sdk.py
webllm_proxy/providers/databricks/: __init__.py  config.py  llmproxy.py  model_discovery.json  models.py
webllm_proxy/research/: __init__.py
webllm_proxy/research/backends/: __init__.py  deep_research.py  emulated.py
webllm_proxy/research/jobstore/: __init__.py  memory.py
webllm_proxy/strategies/: __init__.py
webllm_proxy/strategies/tool_calling/: __init__.py  _shared.py  agentclip.py  native_channel.py
webllm_proxy/transport/: __init__.py  browser.py  process.py
webllm_proxy/utils/: __init__.py  chrome_import.py  config.py  convert.py  env.py  logging.py  openai.py  process.py  prompts.py  redaction.py  system_browser.py  tags.py  tokens.py
webllm_proxy/utils/tokens_data/: ATTRIBUTION.md  model_profiles.json
webllm_proxy/wire/: __init__.py  anthropic.py  openai.py
