[project]
name = "webllm-proxy"
dynamic = ["version"]
description = "Browser-backed local API bridges over login-only web LLMs (ChatGPT web, Databricks Genie/llmproxy), driven through a stealth browser (CloakBrowser)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["chatgpt", "databricks", "anthropic", "openai", "proxy", "api", "cloakbrowser", "coding-agent"]
dependencies = [
    # Browser layer: stealth Chromium that passes Cloudflare Turnstile.
    # The ~200MB browser binary auto-downloads on first run (or `webllm-proxy install`).
    "cloakbrowser>=0.4.10",
    "flask>=3.0",
    "flask-cors>=6.0",
    "psutil>=6.0",        # cross-platform process enumeration/termination
    "platformdirs>=4.0",  # cross-platform per-OS data dir (login profiles)
    "pyyaml>=6.0",        # parse webllm-proxy.yaml
    "pydantic>=2.0",      # validate/type the config schema
    "tiktoken>=0.7",      # BPE token counting (usage estimation)
]

[project.scripts]
webllm-proxy = "webllm_proxy.__main__:main"

[project.urls]
Documentation = "https://github.com/CloakHQ/CloakBrowser"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "webllm_proxy/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["webllm_proxy"]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "ty>=0.0.1a1",
    "pytest>=8.0",
    "poethepoet>=0.31",
    # validation-only clients for the smoke/compat suite (never in the runtime path)
    "openai>=1.40",
    "anthropic>=0.34",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
# docs/discovery holds reverse-engineering notes + throwaway sample projects
# (intentionally buggy fixtures), not package code -- don't lint them.
extend-exclude = ["docs"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RET", "PTH", "PL", "C90", "RUF"]

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.ruff.lint.pylint]
max-branches = 10
max-nested-blocks = 3
max-args = 6

[tool.ruff.lint.per-file-ignores]
# Lazy imports keep provider isolation (selecting one backend never imports the
# other's env-reading config) and CLI startup fast -- intentional, not a smell.
"webllm_proxy/cli.py" = ["PLC0415"]
"webllm_proxy/providers/__init__.py" = ["PLC0415"]
# The single Flask route module: one stateful streaming HTTP response over a
# shared browser turn is an inherently linear, branchy request flow -- splitting
# it further would trade readability for indirection between functions that all
# need the same handful of locals.
"webllm_proxy/http/routes.py" = ["C901", "PLR0911", "PLR0912", "PLR0915", "PLR2004", "PLR0913"]
# Provider request paths + the Anthropic-SSE decoder + the server boot loop:
# same shape -- linear per-event/per-provider branching over a streaming turn.
"webllm_proxy/providers/chatgpt/__init__.py" = ["C901", "PLR0912", "PLR0913"]
"webllm_proxy/providers/databricks/__init__.py" = ["C901", "PLR0912", "PLR0913"]
"webllm_proxy/providers/copilot/__init__.py" = ["C901", "PLR0912"]
"webllm_proxy/utils/convert.py" = ["C901", "PLR0911"]
"webllm_proxy/server.py" = ["C901", "PLR0912"]
# The browser session constructor threads a handful of per-launch options
# (profile, headless, auth check, fetch patterns, extension paths) -- all
# keyword-only and legitimately needed; splitting it would only add indirection.
"webllm_proxy/gateways/cloakbrowser/session.py" = ["PLR0913"]
# research.py lazily imports its own package `__init__` (`_trigger`) to avoid a
# real import cycle -- intentional, like the other lazy provider imports.
"webllm_proxy/providers/chatgpt/research.py" = ["PLC0415"]
# Magic-number / long-assert-line noise in test literals is normal, not a smell.
"tests/*" = ["PLR2004", "E501"]
# The live smoke suite imports the SDK lazily (so unit runs don't need it) and
# reads a stream into a list -- both fine in an opt-in integration script.
"tests/smoke_openai_sdk.py" = ["PLR2004", "E501", "PLC0415", "C416"]
# One-off reverse-engineering/dev scripts (not shipped, not imported).
"scripts/*" = [
    "C901", "PLR2004", "PLC0415", "E501", "SIM103", "RET504", "PTH123", "RUF059", "UP015", "E702",
    "PLW2901", "PLR0911", "PLR0912", "PLW1510", "RUF100", "PLR0915",
]

[tool.poe.tasks]
fmt = "ruff format ."
lint = "ruff check ."
typecheck = "ty check webllm_proxy"
test = "pytest -q"
check = ["fmt", "lint", "typecheck", "test"]
live = "python scripts/e2e_live.py"
build = "uv build"
bundle = "python scripts/build_offline_bundle.py"
bundle-linux = "python scripts/build_offline_bundle.py --target linux-x64"
bundle-windows = "python scripts/build_offline_bundle.py --target windows-x64"
publish = "uv publish"
release = ["check", "build"]

[tool.uv.workspace]
members = [
    "docs/discovery/project_test",
]
